kubernetes/storage/rook-ceph/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ceph-dashboard
  namespace: storage
spec:
parentRefs:
  - name: internal
    namespace: network
  hostnames:
    - "ceph.whoverse.dev"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: rook-ceph-mgr-dashboard
          port: 7000
